<resources>

    <!-- app name -->
    <string name="app_name">Book Store</string>

    <!-- menu options for catalog activity [CHAR LIMIT=20] -->
    <string name="action_insert_placeholder_data">Insert placeholder data</string>
    <string name="action_delete_all_entries">Delete all entries</string>

    <!-- menu options for editor activity [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- label for list item if the author is not specified -->
    <string name="unknown_author">Unknown author</string>

    <!-- titles for the empty state of the list view [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a book title</string>

    <!-- dialog message asking the user to confirm delete action [CHAR LIMIT=NONE] -->
    <string name="dialog_msg_delete_all_books">Delete all books?</string>
    <string name="dialog_msg_delete_single_book">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- dialog message asking the user to confirm leaving editor with unsaved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard_changes">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <!-- toast messages for status of delete action [CHAR LIMIT=NONE] -->
    <string name="toast_delete_successful">Book deleted</string>
    <string name="toast_delete_failed">Error with deleting book</string>
    <string name="toast_save_successful">Book saved</string>
    <string name="toast_save_failed">Error saving book</string>
    <string name="toast_quantity_at_zero">Zero quantity</string>
    <string name="toast_enter_name">Enter a book title</string>
    <string name="toast_enter_author">Enter a book author</string>
    <string name="toast_enter_price">Enter a book price</string>
    <string name="toast_enter_supplier_name">Enter a book supplier</string>
    <string name="toast_enter_supplier_phone">Enter a supplier phone</string>

    <!-- label for categories in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>
    <string name="category_price">Price</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_supplier">Supplier</string>

    <!-- text hint for input fields in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_name">Title</string>
    <string name="hint_book_author">Author</string>
    <string name="hint_book_price">14.95</string>
    <string name="hint_supplier_name">Penguin Publishers</string>
    <string name="hint_supplier_phone">800-123-4567</string>

    <!-- units of currency for the price of the book [CHAR LIMIT=5] -->
    <string name="unit_book_price">$ USD</string>

    <!-- app bar titles for two different modes of editor activity [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_book">Edit book</string>
    <string name="editor_activity_title_add_a_book">Add a book</string>

    <!-- quantity picker buttons in the editor -->
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="minus">–</string>

</resources>
